--- a/style.css
+++ b/style.css
@@ -16,7 +16,12 @@ body,html{
     padding: 0;
     margin:0;
 }
-body{
+.Game{
+    width: 100%;
+    height:100%;
+    max-height:100%;
+    padding: 0;
+    margin:0;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: 1fr;
