--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@
 
 }
 
-
+.firsttile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 body,html{
     width: 100%;
