--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
+:root{
+    --hit-margin:30px;
+}
+
 .tile{
     height:25%;
     width:100%;
-    border: none;
     border-radius: 0;
-    background-color: rgb(41, 41, 41);
+    background-color: rgba(41, 41, 41,0);
+    border-top: solid var(--hit-margin) rgba(0, 0, 0, 0);
+    border-bottom: solid var(--hit-margin) rgba(0, 0, 0, 0);
+    position: relative;
+    top: calc(var(--hit-margin) - var(--hit-margin) * 2);
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
 
+.innertile{
+    pointer-events: none;
+    border-radius:5vh;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(31, 7, 7);
+    box-shadow: 0px 15px rgb(41, 41, 41);
+    border: solid 1px rgb(202, 54, 195);
 }
 
 .firsttile{
@@ -17,15 +37,17 @@ body,html{
     width: 100%;
     height:100%;
     max-height:100%;
-    padding: 0;
-    margin:0;
+    padding: 0px;
+    margin:0px;
 }
+
 .Game{
     width: 100%;
     height:100%;
     max-height:100%;
-    padding: 0;
-    margin:0;
+    box-sizing:border-box;
+    padding: 1px;
+    margin:0px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: 1fr;
