--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    user-select: none;
 }
 
 .innertile{
@@ -25,6 +26,11 @@
     background-color: rgb(31, 7, 7);
     box-shadow: 0px 15px rgb(41, 41, 41);
     border: solid 1px rgb(202, 54, 195);
+    display: flex;
+    flex-direction: column;
+    justify-content:end;
+    align-items:center;
+    user-select: none;
 }
 
 .firsttile{
@@ -32,7 +38,6 @@
     justify-content: center;
     align-items: center;
 }
-
 body,html{
     width: 100%;
     height:100%;
@@ -58,3 +63,17 @@ body,html{
 	margin: 20px auto;
 	max-width: 500px;
 }
+
+.slider{
+    pointer-events: auto;
+}
+
+.thumb{
+    width: 100%;
+    background-color: rgb(253, 50, 243);
+    pointer-events: auto;
+    user-select: none;
+    border-radius:5vh;
+}
+
+/* https://cssgradient.io/ */
