--- a/style.css
+++ b/style.css
@@ -81,3 +81,26 @@ body,html{
 input,button,select{
     -webkit-tap-highlight-color: transparent;
 }
+
+#canvas1{
+    position: absolute;
+    background: linear-gradient(0deg,rgba(145, 183, 253, 1) 0%, rgba(255, 179, 235, 1) 50%, rgba(145, 183, 253, 1) 100%);
+    width: 100%;
+    height: 100%;
+}
+#canvas2{
+    position: absolute;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    filter: blur(1px);
+    opacity: 0.5;
+}
+#canvas3{
+    position: absolute;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    filter: blur(1px);
+    opacity: 0.5;
+}
