--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ input,button,select,div{
 
 
 .SpeedUpDiv{
-    margin-top: 20vh;
+    margin-top: 30%;
     display: flex;
     flex-direction: row;
     justify-content: center;
