--- a/css/style.css
+++ b/css/style.css
@@ -224,9 +224,9 @@ input,button,select,div{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 42px 16px;
+    padding: 20px 16px;
     width: calc(100% - 32px);
-    height: calc(100% - 84px);
+    height: calc(100% - 40px);
 }
 
 .MusicImg{
@@ -546,3 +546,25 @@ input,button,select,div{
     margin: 0;
 }
 
+.pinkbtn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #FF8FFF;
+    box-shadow: 0px 4px 0px #D078D0;
+    border-radius: 50vh;
+    border: none;
+}
+
+.separator{
+    width: 246px;
+    height: 3px;
+    background-color: hsla(0, 0%, 100%,42%);
+    border-radius: 40px;
+}
+
+.stars{
+    width: 185px;
+    height: auto;
+}
