--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@ input,button,select,div{
 }
 
 .ConnectBtn{
-    background-image: url("Data/Texture/texture-btnconnect.png");
+    background-image: url("../Data/Texture/texture-btnconnect.png");
 }
 
 
@@ -569,3 +569,4 @@ input,button,select,div{
     height: auto;
 
 }
+
