--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,13 @@ input,button,select,div{
     height: 100%;
     filter: blur(1px);
 }
+#canvastile{
+    position: absolute;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    -webkit-tap-highlight-color: transparent;
+}
 
 .score{
     margin: 0;
@@ -567,6 +574,4 @@ input,button,select,div{
 .stars{
     width: 185px;
     height: auto;
-
 }
-
